[package]
name = "spynner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14.27", features = ["full", "tcp"] }
pyo3 = { version = "0.19.1", features = ["auto-initialize"] }
rayon = "1.7.0"
serde = "1.0.174"
serde_json = "1.0.103"
tokio = { version = "1.29.1", features = ["full"] }

[build-dependencies]
walkdir = "2.3.3"
